Fixed flickering cursor on edges

--- a/app/styles/_temp.scss
+++ b/app/styles/_temp.scss
@@ -486,6 +486,10 @@ td a {
   cursor: default;
 }
 
+#fileToUploadBtn {
+  cursor: default;
+}
+
 .fileholder {
   width: 250px;
 }
